Details
-
Bug
-
Status: Resolved
-
P4
-
Resolution: Fixed
-
20
Description
A quick fix for JDK-8297036 to prevent blocking its proceeding: after applying JDK-8297036, we can reproduce a crash when building fastdebug program natively on RISC-V. But the real cause seems to be this issue.
A stub expansion is missing before doing `align()` (JDK-8280152).
A stub expansion is missing before doing `align()` (
Attachments
Issue Links
- relates to
-
JDK-8280152 AArch64: Reuse runtime call trampolines
-
- Resolved
-