8297763: Fix missing stub code expansion before align() in shared trampolines

Reviewed-by: fyang, luhenry